# readytradergo2023

./: CMakeLists.txt  README.md  exchange.json  utility.sh
arbtr_dyn_FAK/: arbtr_dyn_FAK.cc  arbtr_dyn_FAK.json
arbtr_dyn_GFD/: arbtr_dyn_GFD.cc  arbtr_dyn_GFD.json
arbtr_fix_FAK/: arbtr_fix_FAK.cc  arbtr_fix_FAK.json
arbtr_fix_GFD/: arbtr_fix_GFD.cc  arbtr_fix_GFD.json
autotrader/: autotrader.cc
basic_plus/: basic_plus.cc  basic_plus.json
basic_plus_polyorder/: basic_plus_polyorder.cc  basic_plus_polyorder.json
datanalysis/: dataextraction.py  extranalysis.py  movingaverages.py  score_board.csv
datanalysis/BGAF_2047/: match156_score_board.csv  match206_score_board.csv  match231_score_board.csv  match244_score_board.csv  match250_score_board.csv  match253_score_board.csv  match256_score_board.csv  match55_score_board.csv
datanalysis/newround/: match138_score_board.csv  match197_score_board.csv  match19_score_board.csv
header/: arbtr_dyn_GFD.h  autotrader.h  basic_plus_polyorder.h
hybrid/: hybrid.cc  hybrid.json
